Dynamic Nav Bar

--- a/firstpage.html
+++ b/firstpage.html
@@ -38,11 +38,7 @@
     </head>
     <body>
         <!-- Navigation Bar -->
-       <div class="topnav">
-            <a href="secondpage.html">Page Two</a>
-            <a href="trollymippin.html">trollymippin</a>
-            <a href="greenshroom.html">greenshroomstudios</a>
-        </div>
+       <div id="navbar-container"></div>
 
         <div class="welcome">
             <!-- Welcome section -->
@@ -58,7 +54,7 @@
                 <li>October 27th 2025 @ 10:49:47a [Second Page Added]</li>
                 <li>October 27th 2025 @ 10:59:12a [CSS Page Added]</li>
                 <li>October 27th 2025 @ 11:12:04a [Nav Bar Testing Begun]</li>
-                <li>October 27th 2025 @ 11:28:11a [Nav Bar Implementation]</p>
+                <li>October 27th 2025 @ 11:28:11a [Nav Bar Implementation]</li>
                 <li>October 27th 2025 @ 11:45:56a [Nav Bar Optimization & Site Theme Changes</li>
                 <li>October 29th 2025 @ 09:51:39a [New Font Implimentation]</li>
                 <li>October 29th 2025 @ 10:25:36a [Fourth Page Implementation]</li>
@@ -68,10 +64,9 @@
                 <li>October 29th 2025 @ 02:10:12p [Flexbox Mobile Button Formatting]</li>
                 <li>October 29th 2025 @ 11:45:10p [Additional Theme Implementation]</li>
                 <li style="color: #bf9b30;">October 30th 2025 @ 12:09:00a [Formatting]</li>
-
-
-
             </ul>
         </div>
+
+        <script src="navbar.js"></script>
     </body>
 </html>
