--- a/greenshroom.html
+++ b/greenshroom.html
@@ -37,11 +37,7 @@
     </head>
     <body>
         <!-- Navigation Bar -->
-       <div class="topnav">
-            <a href="firstpage.html">Homepage</a>
-            <a href="secondpage.html">Page Two</a>
-            <a href="trollymippin.html">trollymippin</a>
-        </div>
+       <div id="navbar-container"></div>
 
         <div class="welcome">
             <h1>@greenshroomstudios</h1>
@@ -56,5 +52,7 @@
              <img src="Images/greenshroomstudios_airplane.png" alt="airplane wing against a dark blue sky at sunset">
             <img src="Images/greenshroomstudios_mushroom.png" alt="mushroom">
         </div>
+
+        <script src="navbar.js"></script>
     </body>
 </html>
