--- a/secondpage.html
+++ b/secondpage.html
@@ -37,11 +37,7 @@
     </head>
     <body>
         <!-- Navigation Bar -->
-        <div class="topnav">
-            <a href="firstpage.html">Homepage</a>
-            <a href="trollymippin.html">trollymippin</a>
-            <a href="greenshroom.html">greenshroomstudios</a>
-        </div>
+        <div id="navbar-container"></div>
 
         <div class="welcome">
             <h1>HI! You've made it to page 2!</h1>
@@ -49,5 +45,6 @@
                This page was a proof of concept for linking.<br>
                It is currently a placeholder page.</p>
         </div>
+    <script src="navbar.js"></script>
     </body>
 </html>
