--- a/trollymippin.html
+++ b/trollymippin.html
@@ -38,11 +38,8 @@
     </head>
     <body>
         <!-- Navigation Bar -->
-        <div class="topnav">
-            <a href="firstpage.html">Homepage</a>
-            <a href="secondpage.html">Page Two</a>
-            <a href="greenshroom.html">greenshroomstudios</a>
-        </div>
+       <div id="navbar-container"></div>
+
         <!-- Welcome Text -->
         <div class="welcome">
             <h1>@trollymippin</h1>
@@ -58,6 +55,6 @@
             <img src="Images/trollymippin_bridgeatnight.png" alt="Bridge at night"
 
         </div>
-
+    <script src="navbar.js"></script>
     </body>
 </html>
